; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/daemon/extr_remote.c_do_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/daemon/extr_remote.c_do_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.daemon_remote = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.daemon_remote*)* @do_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_stop(i32* %0, %struct.daemon_remote* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.daemon_remote*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.daemon_remote* %1, %struct.daemon_remote** %4, align 8
  %5 = load %struct.daemon_remote*, %struct.daemon_remote** %4, align 8
  %6 = getelementptr inbounds %struct.daemon_remote, %struct.daemon_remote* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  %9 = load %struct.daemon_remote*, %struct.daemon_remote** %4, align 8
  %10 = getelementptr inbounds %struct.daemon_remote, %struct.daemon_remote* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @comm_base_exit(i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @send_ok(i32* %15)
  ret void
}

declare dso_local i32 @comm_base_exit(i32) #1

declare dso_local i32 @send_ok(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
